Bug 1627313 - Activate an HPF on getUserMedia microphone input, when processing is enabled. r=achronop

The high-pass filter helps fixing the DC bias on input, which is critical for
the AEC to work well.

It's not controllable by authors, enabled if any of AEC, AGC or Noise
suppression is activated, disabled otherwise, and therefore not taken into
account when activating the pass-through mode.

`media.getusermedia.hpf_enabled` allows controlling it's activation. This
defaults to `true`.

Differential Revision: https://phabricator.services.mozilla.com/D70393