dom/media/webrtc/MediaEngineWebRTCAudio.h
@@ -95,6 +95,7 @@ class MediaEngineWebRTCMicrophoneSource : public MediaEngineSource {
   void UpdateAECSettings(bool aEnable, bool aUseAecMobile,
                          webrtc::EchoCancellation::SuppressionLevel aLevel);
   void UpdateAGCSettings(bool aEnable, webrtc::GainControl::Mode aMode);
+  void UpdateHPFSettings(bool aEnable);
   void UpdateNSSettings(bool aEnable, webrtc::NoiseSuppression::Level aLevel);
   void UpdateAPMExtraOptions(bool aExtendedFilter, bool aDelayAgnostic);
 
@@ -191,6 +192,7 @@ class AudioInputProcessing : public AudioDataListener {
   void UpdateAECSettings(bool aEnable, bool aUseAecMobile,
                          webrtc::EchoCancellation::SuppressionLevel aLevel);
   void UpdateAGCSettings(bool aEnable, webrtc::GainControl::Mode aMode);
+  void UpdateHPFSettings(bool aEnable);
   void UpdateNSSettings(bool aEnable, webrtc::NoiseSuppression::Level aLevel);
   void UpdateAPMExtraOptions(bool aExtendedFilter, bool aDelayAgnostic);
 
